content/k8s-ingress/nginx-plus-ingress/bigip/specific-ingress-class/nginx-plus-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cis.f5.com/as3-tenant: nginx-ingress
    cis.f5.com/as3-app: nginx-ingress-app
    cis.f5.com/as3-pool: nginx-ingress-pool
  name: nginx-ingress-svc
  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-ingress
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cis.f5.com/as3-tenant: nginx-ingress
    cis.f5.com/as3-app: nginx-ingress-dashboard-app
    cis.f5.com/as3-pool: nginx-ingress-dashboard-pool
  name: nginx-ingress-dashboard-svc
  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8898
  selector:
    app: nginx-ingress
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cis.f5.com/as3-tenant: nginx-ingress
    cis.f5.com/as3-app: nginx-ingress-fintech-app
    cis.f5.com/as3-pool: nginx-ingress-fintech-pool
  name: nginx-ingress-fintech-svc
  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-ingress-fintech
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cis.f5.com/as3-tenant: nginx-ingress
    cis.f5.com/as3-app: nginx-ingress-fintech-dashboard-app
    cis.f5.com/as3-pool: nginx-ingress-fintech-dashboard-pool
  name: nginx-ingress-fintech-dashboard-svc
  namespace: nginx-ingress
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8898
  selector:
    app: nginx-ingress-fintech
  sessionAffinity: None
  type: ClusterIP
